--- a/paginas RP no principales .css
+++ b/paginas RP no principales .css
@@ -3,6 +3,7 @@ footer {
     font-family: Verdana, Geneva, Tahoma, sans-serif;
     color: black;
     font-size: 15px;
+    position: relative;
  
 }
 
@@ -25,14 +26,14 @@ p{
     color: black;
     position: relative;
     left: 25px;
-    top: 35px;
+    top: 30px;
     padding: 7px;
     margin-right: 40px;
    
 }
 
 body {
-    background: url(fondo/posible\ fondo\ 2.jpg);
+    background: url(fondo/posible\ fondo\ 1.jpg);
     background-size: cover;
     height: 50vh;
     min-height: 640px;
